@@ -687,9 +687,9 @@ public:
         m_assembler.mov_r(dest, ARMAssembler::getOp2(1), ARMCondition(cond));
     }
 
-    void compare8(RelationalCondition cond, AbsoluteAddress left, TrustedImm32 right, RegisterID dest)
+    void compare8(RelationalCondition cond, Address left, TrustedImm32 right, RegisterID dest)
     {
-        load8(left.m_ptr, ARMRegisters::S1);
+        load8(left, ARMRegisters::S1);
         compare32(cond, ARMRegisters::S1, right, dest);
     }
 
@@ -749,7 +749,7 @@ public:
         load32(left.m_ptr, ARMRegisters::S1);
         return branch32(cond, ARMRegisters::S1, right);
     }
-    
+
     Jump branch32(RelationalCondition cond, AbsoluteAddress left, TrustedImm32 right)
     {
         load32(left.m_ptr, ARMRegisters::S1);
